Fix: Using dvh on body size to remove unwanted scroll on mobile device

--- a/style/main.css
+++ b/style/main.css
@@ -24,7 +24,7 @@
 
 body {
     width: 100vw;
-    height: 100vh;
+    height: 100dvh;
     margin: 0;
     background-color: #6e90f7;
     color: white;
